[gd_scene load_steps=25 format=2]

[ext_resource path="res://assets/raw-tiles/sky background.png" type="Texture" id=1]
[ext_resource path="res://TileMaps.tres" type="TileSet" id=2]
[ext_resource path="res://Shadow.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Character.gd" type="Script" id=5]
[ext_resource path="res://Ladder.gd" type="Script" id=6]
[ext_resource path="res://LadderBtn.gd" type="Script" id=7]
[ext_resource path="res://Ladder2.gd" type="Script" id=8]
[ext_resource path="res://LadderBtn2.gd" type="Script" id=9]
[ext_resource path="res://TorchDetect.gd" type="Script" id=10]
[ext_resource path="res://ExitBtn.gd" type="Script" id=11]
[ext_resource path="res://Exit.gd" type="Script" id=12]
[ext_resource path="res://assets/sfx/Torch.mp3" type="AudioStream" id=13]
[ext_resource path="res://assets/sfx/Shadow Birth.mp3" type="AudioStream" id=14]
[ext_resource path="res://assets/sfx/Button_w_bells.mp3" type="AudioStream" id=15]
[ext_resource path="res://assets/sfx/Door Open.mp3" type="AudioStream" id=16]
[ext_resource path="res://assets/sfx/Chest.mp3" type="AudioStream" id=17]
[ext_resource path="res://assets/sfx/Door Unlock.mp3" type="AudioStream" id=18]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7.5, 7.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 39.5, 5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 6.5, 6.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 11, 9 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 39.375 )

[sub_resource type="CircleShape2D" id=4]

[node name="Tower1" type="Node2D"]

[node name="Background" type="Node2D" parent="."]

[node name="SkyBG" type="TextureRect" parent="Background"]
margin_left = 148.0
margin_top = -283.0
margin_right = 833.0
margin_bottom = 493.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkyBG" type="TextureRect" parent="Background/SkyBG"]
margin_left = -805.0
margin_top = -73.0
margin_right = -96.0
margin_bottom = 736.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MapBG" type="TileMap" parent="Background"]
position = Vector2( 13, 4 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 50, 50 )
format = 1
tile_data = PoolIntArray( -458751, 13, 0, -458750, 13, 0, -458749, 13, 0, -458748, 13, 0, -458747, 13, 0, -458746, 13, 0, -458745, 13, 0, -393215, 13, 0, -393214, 13, 0, -393213, 13, 0, -393212, 13, 0, -393211, 13, 0, -393210, 13, 0, -393209, 13, 0, -327679, 13, 0, -327678, 13, 0, -327677, 13, 0, -327676, 13, 0, -327675, 13, 0, -327674, 13, 0, -327673, 13, 0, -262143, 13, 0, -262142, 13, 0, -262141, 13, 0, -262140, 13, 0, -262139, 13, 0, -262138, 13, 0, -262137, 13, 0, -196607, 13, 0, -196606, 13, 0, -196605, 13, 0, -196604, 13, 0, -196603, 13, 0, -196602, 13, 0, -196601, 13, 0, -131071, 13, 0, -131070, 13, 0, -131069, 13, 0, -131068, 13, 0, -131067, 13, 0, -131066, 13, 0, -131065, 13, 0, -65535, 13, 0, -65534, 13, 0, -65533, 13, 0, -65532, 13, 0, -65531, 13, 0, -65530, 13, 0, -65529, 13, 0, 1, 13, 0, 2, 13, 0, 3, 13, 0, 4, 13, 0, 5, 13, 0, 6, 13, 0, 7, 13, 0, 65537, 13, 0, 65538, 13, 0, 65539, 13, 0, 65540, 13, 0, 65541, 13, 0, 65542, 13, 0, 65543, 13, 0, 131073, 13, 0, 131074, 13, 0, 131075, 13, 0, 131076, 13, 0, 131077, 13, 0, 131078, 13, 0, 131079, 13, 0, 196609, 13, 0, 196610, 13, 0, 196611, 13, 0, 196612, 13, 0, 196613, 13, 0, 196614, 13, 0, 196615, 13, 0, 262145, 13, 0, 262146, 13, 0, 262147, 13, 0, 262148, 13, 0, 262149, 13, 0, 262150, 13, 0, 262151, 13, 0, 327681, 13, 0, 327682, 13, 0, 327683, 13, 0, 327684, 13, 0, 327685, 13, 0, 327686, 13, 0, 327687, 13, 0, 393217, 13, 0, 393218, 13, 0, 393219, 13, 0, 393220, 13, 0, 393221, 13, 0, 393222, 13, 0, 393223, 13, 0, 458753, 13, 0, 458754, 13, 0, 458755, 13, 0, 458756, 13, 0, 458757, 13, 0, 458758, 13, 0, 458759, 13, 0, 524289, 13, 0, 524290, 13, 0, 524291, 13, 0, 524292, 13, 0, 524293, 13, 0, 524294, 13, 0, 524295, 13, 0, 589825, 13, 0, 589826, 13, 0, 589827, 13, 0, 589828, 13, 0, 589829, 13, 0, 589830, 13, 0, 589831, 13, 0 )

[node name="LadderBtn" type="Area2D" parent="."]
collision_mask = 12
script = ExtResource( 7 )

[node name="ObjectMap" type="TileMap" parent="LadderBtn"]
position = Vector2( 13, 3 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 25, 25 )
format = 1
tile_data = PoolIntArray( 327689, 4, 0 )

[node name="PushBtn" type="CollisionShape2D" parent="LadderBtn"]
position = Vector2( 250.5, 146 )
shape = SubResource( 3 )

[node name="LadderSound" type="AudioStreamPlayer" parent="LadderBtn"]
stream = ExtResource( 17 )
volume_db = -6.0

[node name="ButtonBell" type="AudioStreamPlayer" parent="LadderBtn"]
stream = ExtResource( 15 )
volume_db = -6.0

[node name="LadderBtn2" type="Area2D" parent="."]
position = Vector2( -49, -126 )
collision_mask = 12
script = ExtResource( 9 )

[node name="ObjectMap" type="TileMap" parent="LadderBtn2"]
position = Vector2( 13, 3 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 25, 25 )
format = 1
tile_data = PoolIntArray( 327689, 4, 0 )

[node name="PushBtn" type="CollisionShape2D" parent="LadderBtn2"]
position = Vector2( 250.5, 144.5 )
shape = SubResource( 3 )

[node name="Window" type="Node2D" parent="."]

[node name="Light" type="Area2D" parent="Window"]

[node name="ObjectMap" type="TileMap" parent="Window/Light"]
position = Vector2( 13, 5 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 25, 25 )
format = 1
tile_data = PoolIntArray( 131085, 2, 0, 131086, 2, 0, 196621, 2, 0, 196622, 2, 0, 262157, 2, 0, 262158, 2, 0 )

[node name="Polygon2D" type="Polygon2D" parent="Window/Light"]
position = Vector2( 375, 67 )
color = Color( 1, 0.996078, 0.784314, 0.447059 )
polygon = PoolVector2Array( 12, 62, -28, 185, -150, 185, -90, 99, -91, 90, -160, 90, -38, -10, -38, 63, 11, 63, 11, 63 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Window/Light"]
position = Vector2( 375, 67 )
polygon = PoolVector2Array( 13, -13, 12, 62, -28, 185, -134, 184, -89, 97, -143, 94, -103, 44, -36, -10 )

[node name="ShadowPlatform" type="StaticBody2D" parent="Window/Light"]
position = Vector2( -32, 52 )
collision_layer = 16
collision_mask = 8

[node name="CollisionShade2D" type="CollisionShape2D" parent="Window/Light/ShadowPlatform"]
position = Vector2( 343, 154 )
shape = SubResource( 2 )
one_way_collision = true

[node name="ColorRect" type="ColorRect" parent="Window/Light/ShadowPlatform/CollisionShade2D"]
margin_left = -38.0
margin_top = -9.0
margin_right = 38.0
margin_bottom = 5.0
color = Color( 0, 0, 0, 0.45098 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Window2" type="Node2D" parent="."]
position = Vector2( -57, -265 )

[node name="Light" type="Area2D" parent="Window2"]

[node name="ObjectMap" type="TileMap" parent="Window2/Light"]
position = Vector2( 13, 5 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 25, 25 )
format = 1
tile_data = PoolIntArray( 131085, 2, 0, 131086, 2, 0, 196621, 2, 0, 196622, 2, 0, 262157, 2, 0, 262158, 2, 0 )

[node name="Polygon2D" type="Polygon2D" parent="Window2/Light"]
position = Vector2( 2, 0 )
color = Color( 1, 0.996078, 0.784314, 0.447059 )
polygon = PoolVector2Array( 339, 55, 209, 201, 240, 198, 240, 208, 180, 294, 309, 295, 344, 196, 429, 196, 387, 55 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Window2/Light"]
position = Vector2( 375, 67 )
polygon = PoolVector2Array( 19, -11, 53, 128, -28, 127, -64, 228, -192, 228, -131, 139, -226, 104, -239, 63, -212, 24, -148, 23, -103, 64, -36, -11 )

[node name="ShadowPlatform" type="StaticBody2D" parent="Window2/Light"]
position = Vector2( 85, 83 )
scale = Vector2( 0.6, 1 )
collision_layer = 16
collision_mask = 8

[node name="CollisionShade2D" type="CollisionShape2D" parent="Window2/Light/ShadowPlatform"]
position = Vector2( 343, 154 )
shape = SubResource( 2 )
one_way_collision = true

[node name="ColorRect" type="ColorRect" parent="Window2/Light/ShadowPlatform/CollisionShade2D"]
margin_left = -38.0
margin_top = -9.0
margin_right = 38.0
margin_bottom = 5.0
color = Color( 0, 0, 0, 0.45098 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Polygon2D2" type="Polygon2D" parent="Window2/Light"]
position = Vector2( -172, -4 )
color = Color( 1, 0.996078, 0.784314, 0.447059 )
polygon = PoolVector2Array( 335, 97, 311, 138, 325, 177, 365, 186, 410, 169, 426, 127, 398, 96 )

[node name="SurfaceMap" type="TileMap" parent="."]
position = Vector2( 13, 4 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 25, 25 )
collision_mask = 9
format = 1
tile_data = PoolIntArray( -917504, 15, 0, -917488, 16, 0, -786432, 15, 0, -786416, 16, 0, -655360, 15, 0, -655344, 16, 0, -524288, 15, 0, -524272, 16, 0, -393216, 15, 0, -393211, 6, 0, -393200, 16, 0, -262144, 15, 0, -262128, 16, 0, -196605, 10, 0, -196604, 11, 0, -196603, 11, 0, -196602, 12, 0, -196597, 10, 0, -196596, 11, 0, -196595, 11, 0, -196594, 11, 0, -196593, 11, 0, -131072, 15, 0, -131056, 16, 0, -65522, 10, 0, -65521, 11, 0, 0, 15, 0, 10, 10, 0, 11, 11, 0, 12, 11, 0, 13, 12, 0, 16, 16, 0, 65540, 10, 0, 65541, 11, 0, 65542, 11, 0, 65543, 11, 0, 65544, 11, 0, 65545, 12, 0, 131072, 15, 0, 131088, 16, 0, 196612, 10, 0, 196613, 12, 0, 262144, 15, 0, 262160, 16, 0, 393216, 14, 0, 393218, 14, 0, 393220, 15, 0, 393222, 11, 0, 393223, 11, 0, 393224, 11, 0, 393225, 11, 0, 393226, 12, 0, 393232, 16, 0, 524288, 14, 0, 524290, 14, 0, 524292, 15, 0, 524304, 16, 0, 655360, 14, 0, 655362, 14, 0, 655364, 14, 0, 655366, 14, 0, 655368, 14, 0, 655370, 14, 0, 655372, 14, 0, 655374, 14, 0, 655376, 14, 0, 786432, 14, 0, 786434, 14, 0, 786436, 14, 0, 786438, 14, 0, 786440, 14, 0, 786442, 14, 0, 786444, 14, 0, 786446, 14, 0, 786448, 14, 0, 917504, 15, 0, 917520, 16, 0, 1048576, 15, 0, 1048592, 16, 0, 1179648, 15, 0, 1179664, 16, 0 )

[node name="ExitBtn" type="Area2D" parent="."]
collision_mask = 9
script = ExtResource( 11 )

[node name="TileMap" type="TileMap" parent="ExitBtn"]
position = Vector2( 13, 5 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 25, 25 )
format = 1
tile_data = PoolIntArray( -262139, 17, 0 )

[node name="PushBtn" type="CollisionShape2D" parent="ExitBtn"]
position = Vector2( 150.5, -76.5 )
shape = SubResource( 5 )

[node name="Exit" type="Area2D" parent="."]
script = ExtResource( 12 )

[node name="Door" type="TileMap" parent="Exit"]
position = Vector2( 7.5, -10.5 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 25, 25 )
cell_custom_transform = Transform2D( 25, 25, 0, 64, 0, 0 )
format = 1
tile_data = PoolIntArray( -262131, 18, 0 )

[node name="LockedDoor" type="TileMap" parent="Exit"]
position = Vector2( 7, -36 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 25, 25 )
cell_custom_transform = Transform2D( 25, 25, 0, 0, 0, 0 )
format = 1
tile_data = PoolIntArray( -196595, 19, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit"]
position = Vector2( 345, -101 )
shape = SubResource( 6 )
disabled = true

[node name="UnlockSound" type="AudioStreamPlayer" parent="Exit"]
stream = ExtResource( 18 )
volume_db = -6.0

[node name="OpenSound" type="AudioStreamPlayer" parent="Exit"]
stream = ExtResource( 16 )
volume_db = -6.0

[node name="Ladder" type="Area2D" parent="."]
visible = false
script = ExtResource( 6 )

[node name="ObjectMap" type="TileMap" parent="Ladder"]
position = Vector2( 13, 4 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 25, 25 )
collision_mask = 8
format = 1
tile_data = PoolIntArray( 65543, 8, 0, 131079, 8, 0, 196615, 8, 0, 262151, 8, 0, 327687, 8, 0 )

[node name="ClimbLadder" type="CollisionShape2D" parent="Ladder"]
position = Vector2( 200, 70.625 )
shape = SubResource( 1 )
disabled = true

[node name="Ladder2" type="Area2D" parent="."]
visible = false
position = Vector2( 51, 99 )
script = ExtResource( 8 )

[node name="ObjectMap" type="TileMap" parent="Ladder2"]
position = Vector2( 13, 4 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 25, 25 )
collision_mask = 8
format = 1
tile_data = PoolIntArray( 131079, 8, 0, 196615, 8, 0, 262151, 8, 0, 327687, 8, 0 )

[node name="ClimbLadder" type="CollisionShape2D" parent="Ladder2"]
position = Vector2( 200, 91.25 )
shape = SubResource( 1 )
disabled = true

[node name="Torch" type="Node2D" parent="."]
position = Vector2( 18, -14 )

[node name="TorchDetect" type="Area2D" parent="Torch"]
position = Vector2( 20, -12 )
script = ExtResource( 10 )

[node name="UnlitTorch" type="TileMap" parent="Torch/TorchDetect"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 25, 25 )
format = 1
tile_data = PoolIntArray( 327682, 5, 0 )

[node name="LitTorch" type="TileMap" parent="Torch/TorchDetect"]
visible = false
tile_set = ExtResource( 2 )
cell_size = Vector2( 25, 25 )
format = 1
tile_data = PoolIntArray( 327682, 6, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Torch/TorchDetect"]
position = Vector2( 57, 139 )
shape = SubResource( 4 )

[node name="TorchSound" type="AudioStreamPlayer" parent="Torch/TorchDetect"]
stream = ExtResource( 13 )

[node name="Light" type="Area2D" parent="Torch"]
visible = false

[node name="Polygon2D" type="Polygon2D" parent="Torch/Light"]
position = Vector2( 168.804, 26.451 )
scale = Vector2( 0.990654, 0.990196 )
color = Color( 1, 0.996078, 0.784314, 0.447059 )
polygon = PoolVector2Array( -35, 56, -21, 86, -28, 128, -68, 148, -115, 139, -128, 97, -124.972, 62.1584, -78, 46 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Torch/Light"]
position = Vector2( 375, 67 )
polygon = PoolVector2Array( -330, 21, -283, 4, -241, 15, -227, 45, -233, 86, -271, 105, -320, 98, -334, 53 )
disabled = true

[node name="ShadowPlatform2" type="StaticBody2D" parent="Torch/Light"]
position = Vector2( -53, -14 )
scale = Vector2( 0.5, 1 )
collision_layer = 16
collision_mask = 8

[node name="CollisionShade2D" type="CollisionShape2D" parent="Torch/Light/ShadowPlatform2"]
position = Vector2( 343, 154 )
shape = SubResource( 2 )
disabled = true
one_way_collision = true

[node name="ColorRect" type="ColorRect" parent="Torch/Light/ShadowPlatform2/CollisionShade2D"]
margin_left = -38.0
margin_top = -9.0
margin_right = 38.0
margin_bottom = 5.0
color = Color( 0, 0, 0, 0.45098 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Character" type="Node2D" parent="."]
position = Vector2( 195, 250 )
scale = Vector2( 3, 3 )
z_index = 1
script = ExtResource( 5 )

[node name="Shadow" parent="Character" instance=ExtResource( 3 )]
collision_layer = 8
collision_mask = 16

[node name="Player" parent="Character" instance=ExtResource( 4 )]
scale = Vector2( 1, 1 )
collision_layer = 4
collision_mask = 3

[node name="ShadowSound" type="AudioStreamPlayer" parent="Character"]
stream = ExtResource( 14 )
volume_db = -10.0
pitch_scale = 2.0

[connection signal="body_entered" from="LadderBtn" to="LadderBtn" method="_on_LadderBtn_body_entered"]
[connection signal="body_entered" from="LadderBtn2" to="LadderBtn2" method="_on_LadderBtn2_body_entered"]
[connection signal="area_entered" from="Window/Light" to="Character/Shadow" method="_on_Light_area_entered"]
[connection signal="area_entered" from="Window/Light" to="Character/Player" method="_on_Light_area_entered"]
[connection signal="area_exited" from="Window/Light" to="Character/Shadow" method="_on_Light_area_exited"]
[connection signal="area_exited" from="Window/Light" to="Character/Player" method="_on_Light_area_exited"]
[connection signal="area_entered" from="Window2/Light" to="Character/Shadow" method="_on_Light_area_entered"]
[connection signal="area_entered" from="Window2/Light" to="Character/Player" method="_on_Light_area_entered"]
[connection signal="area_exited" from="Window2/Light" to="Character/Shadow" method="_on_Light_area_exited"]
[connection signal="area_exited" from="Window2/Light" to="Character/Player" method="_on_Light_area_exited"]
[connection signal="body_entered" from="ExitBtn" to="ExitBtn" method="_on_ExitBtn_body_entered"]
[connection signal="body_entered" from="Exit" to="Exit" method="_on_Exit_body_entered"]
[connection signal="body_entered" from="Ladder" to="Ladder" method="_on_Ladder_body_entered"]
[connection signal="body_exited" from="Ladder" to="Ladder" method="_on_Ladder_body_exited"]
[connection signal="body_entered" from="Ladder2" to="Ladder2" method="_on_Ladder2_body_entered"]
[connection signal="body_exited" from="Ladder2" to="Ladder2" method="_on_Ladder2_body_exited"]
[connection signal="body_entered" from="Torch/TorchDetect" to="Torch/TorchDetect" method="_on_TorchDetect_body_entered"]
[connection signal="area_entered" from="Torch/Light" to="Character/Shadow" method="_on_Light_area_entered"]
[connection signal="area_entered" from="Torch/Light" to="Character/Player" method="_on_Light_area_entered"]
[connection signal="area_exited" from="Torch/Light" to="Character/Shadow" method="_on_Light_area_exited"]
[connection signal="area_exited" from="Torch/Light" to="Character/Player" method="_on_Light_area_exited"]
[connection signal="ready" from="Character/Player" to="Character/Shadow" method="_on_Player_ready"]
